@startuml

title __CUSTOMSENSOR's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Sensors {
        package sud_tanj.com.icare.Backend.Sensors.CustomSensor {
          class HCSR04Sensor {
              - duration : Double
              + getUnitMeasurement()
              + run()
              # calculateResult()
              + setDuration()
              + HCSR04Sensor()
              + getDuration()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Sensors {
        package sud_tanj.com.icare.Backend.Sensors.CustomSensor {
          class Pedometer {
              {static} # pedometer : Pedometer
              - sensorValue : double
              - newData : Boolean
              {static} + getInstance()
              # Pedometer()
              + getUnitMeasurement()
              + onSensorChanged()
              + onAccuracyChanged()
              + run()
          }
        }
      }
    }
  }
  

  HCSR04Sensor -up-|> BaseMicrocontrollerSensor
  Pedometer -up-|> SensorEventListener
  Pedometer -up-|> BuiltInSensor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
